--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -10,4 +10,4 @@ spec:
     git:
       url: https://github.com/showpune/zhiyong2-tanzu-java-web-app
       ref:
-        branch: main
+        branch: master
